# UAP047

./: README.md  pyproject.toml  requirements.txt
src/: app.py
